--- a/assets/front1/css/tooplate-infinite-loop.css
+++ b/assets/front1/css/tooplate-infinite-loop.css
@@ -196,8 +196,9 @@ blockquote {
 }
 
 .tm-hero-title {
-  font-size: 3.2 rem;
-  text-shadow: 2px 2px 2px #333;
+  font-weight: bold;
+  font-size: 3.3 rem;
+  text-shadow: 0px 0px 9px #333;
 }
 
 .tm-hero-subtitle {
@@ -211,6 +212,10 @@ blockquote {
   right: 0;
 }
 
+.info-panel{
+  margin-top: -200px;
+  
+}
 @media (max-height: 480px) {
   .tm-hero-text-container-inner {
     margin-top: -40px;
