--- a/assets/front1/css/tooplate-infinite-loop.css
+++ b/assets/front1/css/tooplate-infinite-loop.css
@@ -199,7 +199,9 @@ blockquote {
 .tm-hero-title {
   font-weight: bold;
   font-size: 2.1rem;
-  text-shadow: 2px 2px 3px rgb(31, 12, 138);
+  text-shadow: 2px 2px 3px rgb(0, 0, 0);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(62, 62, 233);
 }
 
 .tm-hero-subtitle {
@@ -222,14 +224,19 @@ blockquote {
 }
 .link a{
   color: rgb(226, 226, 226);
-  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  text-shadow: 2px 2px 3px rgb(0, 0, 0);
   font-weight: bold;  
+  -webkit-text-stroke-width: 0.7px;
+  -webkit-text-stroke-color: rgb(62, 62, 233);
+  
 }
 
 .link a:hover{
-  color: rgb(87, 87, 87) !important;
-  background-color: palegreen;
-  /* text-shadow: 2px 2px 9px rgb(0, 0, 0); */
+  color: rgba(255, 255, 255, 0.404) !important;
+  -webkit-text-stroke-width: 2.3px;
+  -webkit-text-stroke-color: rgb(57, 57, 187);  
+  text-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+  
 }
 @media (max-width: 780px){
   .tm-hero-text-container-inner img{
