finish1 kurang download dn upload pdf

--- a/assets/f2/css/style.css
+++ b/assets/f2/css/style.css
@@ -604,7 +604,7 @@ a:hover {
   height: 100vh;
   position: relative;
   color: #fff;
-  background-image: url(../img/b1.jpeg);
+  background-image: url(../img/a.png);
 }
 
 .intro .intro-content {
